# router_ids

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  test_capture.pcap
examples/: run_on_pi.py  sample_pcap_generator.py
rules/: rules.yaml  thresholds.yaml
src/router_ids/: __init__.py  core.py
src/router_ids/features/: __init__.py  base.py  c2c_extractor.py  ddos_extractor.py  extractor.py  mitm_extractor.py  pcap_parser.py
src/router_ids/models/: __init__.py  c2c_model.py  ddos_detector.py  ddos_model.py  make_dummy_models.py  mitm_model.py  model_runner.py
src/router_ids/models/model_joblib/: c2_encoder.joblib  c2_scaler.joblib  c2c_model.joblib  ddos_model.joblib  mitm_model.joblib  mitm_scaler.joblib
src/router_ids/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_core.py  test_features.py
